--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -65,8 +65,21 @@ video {
   border: 5px solid var(--white);
   border-bottom-color: var(--red);
   border-radius: 50%;
+  animation-name: rotation;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
+@keyframes rotation {
+  from {
+    rotate: (0deg);
+  }
+
+  to {
+    rotate: (360deg);
+  }
+}
 .button {
   display: inline-block;
   margin: 50px 0;
@@ -76,6 +89,19 @@ video {
   border-radius: 5px;
   color: var(--white);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  animation-name: button;
+  animation-duration: 4s;
+  animation-timing-function: ease-in-out;
+  animation-fill-mode: forwards;
+}
+
+@keyframes button {
+  from {
+    scale: 50px;
+  }
+  to {
+    scale: -50px;
+  }
 }
 
 .background {
