--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -89,18 +89,16 @@ video {
   border-radius: 5px;
   color: var(--white);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  animation-name: button;
-  animation-duration: 4s;
-  animation-timing-function: ease-in-out;
-  animation-fill-mode: forwards;
+  animation: changescale 0.5s ease-in-out infinite alternate;
 }
 
-@keyframes button {
+@keyframes changescale {
   from {
-    scale: 50px;
+    scale: (1.1);
   }
+
   to {
-    scale: -50px;
+    scale: (1);
   }
 }
 
@@ -109,6 +107,17 @@ video {
   height: 200px;
   background-image: linear-gradient(45deg, var(--yellow), var(--light-blue));
   background-size: 200% 200%;
+  animation: changecolor 3s ease-in-out infinite alternate;
+}
+
+@keyframes changecolor {
+  from {
+    background-size: 200% 200%;
+  }
+
+  to {
+    background-size: 120% 220%;
+  }
 }
 
 .submit {
@@ -124,6 +133,19 @@ video {
 
 .submit-plane {
   width: 26px;
+  animation: changeposition 1.5s ease-in;
+}
+
+@keyframes changeposition {
+  from {
+    transform: translate(0px, 0px);
+    opacity: 100%;
+  }
+
+  to {
+    transform: translate(50px, -80px);
+    opacity: 0%;
+  }
 }
 
 .pong {
@@ -140,6 +162,17 @@ video {
   width: 10px;
   height: 10px;
   background: var(--black);
+  animation: moving 2s linear;
+}
+
+@keyframes moving {
+  from {
+    transform: translate(-145px, -145px);
+  }
+
+  to {
+    transform: translate(145px, 145px);
+  }
 }
 
 .pong-paddle {
